--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <button onclick="escreva()"> Clique Aqui </button>
+    <button onclick="minhaTabuada()"> Clique Aqui </button>
+    <button onclick="quadrado()"> Clique Aqui </button>
 </body>
 </html>
