--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <script src="estudo.js"></script>
 </head>
 <body>
-    <button onclick="escreva()"> Clique Aqui </button>
-    <button onclick="minhaTabuada()"> Clique Aqui </button>
-    <button onclick="quadrado()"> Clique Aqui </button>
+
+   Valor: <input id="valor" type="text"><br>
+   Juros(Mensais): <input id="juros" type="text"><br>
+   Nr. Meses: <input id="meses" type="text"><br>
+   <button onclick="total()">Enviar</button>
+
 </body>
 </html>
+
