--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
    Nr. Meses: <input id="meses" type="text"><br>
    <button onclick="total()">Enviar</button>
 
+   <br><br><br><br>
+   valor 1: <input id ="v1" type="text"><br>
+   <button>onclick="operacao('+')">soma</button>
+   <button>onclick="operacao('-')">subtração</button>
+   <button>onclick="operacao('*')">multiplicação</button>
+   <button>onclick="operacao('/')">divisão</button>
+   
+
+   <br>
+   valor 2: <input id="2" type="text"><br>
+   <button onclick="calcule()">Calcule</button><br><br>
+   <span id="resultado">0,00</span>
+
+
 </body>
 </html>
 
