--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
 </head>
 
 <body>
+  <input type="checkbox" id="calcFin">
 <div class="calculadora">
+  <label for="calcFin"><h3>Financeira</h3></label>
+  
   <div id="sptotal">
-    <span id="total">Total: 0,00</span>
+    <span id="total">R$ 0,00</span>
   </div>
   Capital: <input id="valor" type="text"><br>
   Juros(mensais): <input id="juros" type="text"><br>
   Nr de Meses: <input id="meses" type="text"><br>
   <button onclick="calcula()">Enviar</button>
+  
   <div id="splistameses">
     <span id="listameses"></span>
   </div>
+
 </div>
   <br><br><br><br>
   Valor 1: <input id="v1" type="text"><br>
