--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>beatriz bueno</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>beatriz bueno</title>
   <script src="estudo.js"></script>
   <link rel="stylesheet" href="geral.css">
 </head>
 
 <body>
+  <div class="aprendendo">
+    <input id="raiz" readonly type="text"><br>
+    <button onclick="calculaESG()">Calcula</button>
+  </div>
   <input type="checkbox" id="calcFin">
-<div class="calculadora">
-  <label for="calcFin"><h3>Financeira</h3></label>
-  
-  <div id="sptotal">
-    <span id="total">R$ 0,00</span>
-  </div>
-  Capital: <input id="valor" type="text"><br>
-  Juros(mensais): <input id="juros" type="text"><br>
-  Nr de Meses: <input id="meses" type="text"><br>
-  <button onclick="calcula()">Enviar</button>
-  
-  <div id="splistameses">
-    <span id="listameses"></span>
-  </div>
+  <div class="calculadora">
+    <label for="calcFin">
+      <h3>Financeira</h3>
+    </label>
 
-</div>
+    <div id="sptotal">
+      <span id="total">R$ 0,00</span>
+    </div>
+    Capital: <input id="valor" type="text"><br>
+    Juros(mensais): <input id="juros" type="text"><br>
+    Nr de Meses: <input id="meses" type="text"><br>
+    <button onclick="calcula()">Enviar</button>
+
+    <div id="splistameses">
+      <span id="listameses"></span>
+    </div>
+
+  </div>
   <br><br><br><br>
   Valor 1: <input id="v1" type="text"><br>
   <button onclick="operacao('+')">Somar</button>
@@ -41,5 +48,5 @@
 
 
 </body>
-</html>
 
+</html>
